# ralf-dialogue

./: .gitignore  README.md  pyproject.toml
demos/: simple_chat.py
ralf_dialogue/: __init__.py  conversation.py  dialogue.py  planner.py  planners.py  world_state.py
ralf_dialogue/ralf_data/: prompts.yml
